feat: remove login code

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -54,7 +54,6 @@
             >Pouchs</a
           >
         </div>
-        <div class="login-btn">Login</div>
       </div>
       <div class="body">
         <div class="body-content">
@@ -157,6 +156,7 @@
         appId: "app_id123",
         isDelay: true,
       });
+      setHeaderUser();
     }, 1000);
   </script>
 </html>
