--- a/src/static/detail.html
+++ b/src/static/detail.html
@@ -53,7 +53,6 @@
             >Pouchs</a
           >
         </div>
-        <div class="login-btn">Login</div>
       </div>
       <div class="body">
         <div class="body-content">
@@ -331,6 +330,8 @@
           "Upload & Design": "Online design",
         },
       });
+
+      setHeaderUser();
 
       const modelId = getQueryValue("modelId");
       const id = getQueryValue("id");
